# DepthAI_ROB

./: .gitignore  commands  frames_2024-11-05_14.23.27.gv  frames_2024-11-05_14.26.14.gv
src/depthai-ros/depthai_examples/: CMakeLists.txt  package.xml
src/depthai-ros/depthai_examples/scripts/: depth_to_gray.py
src/depthai-ros/obstacle_detector/: package.xml  setup.py
src/depthai-ros/obstacle_detector/obstacle_detector/: obstacle_detector.py  obstacle_detector_2d.py  point_cloud_detector.py
